After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 667820 - rtpptdemux: Plug potential pad leak.
rtpptdemux: Plug potential pad leak.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal normal
: 0.10.31
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-01-12 21:16 UTC by Håvard Graff (hgr)
Modified: 2012-01-13 11:03 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (906 bytes, patch)
2012-01-12 21:16 UTC, Håvard Graff (hgr)
reviewed Details | Review

Description Håvard Graff (hgr) 2012-01-12 21:16:36 UTC
Created attachment 205143 [details] [review]
patch

.
Comment 1 Tim-Philipp Müller 2012-01-13 11:03:31 UTC
Solved this differently by just moving the get_caps up a bit:

 commit f10e8192fa8968e84724b627bb3de5fb19fb174d
 Author: Tim-Philipp Müller <tim.muller@collabora.co.uk>
 Date:   Fri Jan 13 10:32:59 2012 +0000

    rtpptdemux: plug pad leak in error code path
    
    Based on patch by: Stig Sandnes <stig.sandnes@cisco.com>
    
    Don't leak srcpad if there are no caps.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=667820