rtpptdemux: plug pad leak in error code path

Based on patch by: Stig Sandnes <stig.sandnes@cisco.com>

Don't leak srcpad if there are no caps.

https://bugzilla.gnome.org/show_bug.cgi?id=667820